--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         }
         
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            /* Changed font-family from 'Comic Sans MS' to 'Arial' for better readability */
+            font-family: 'Arial', sans-serif; 
             background-color: var(--light-color);
             color: var(--dark-color);
             overflow-x: hidden;
@@ -241,7 +242,6 @@
             </div>
             <p class="text-lg mb-2 font-bold">Our bodies are amazing!</p>
             <p>Remember to take care of all your body parts so they can keep you healthy.</p>
-            <p class="mt-4 text-sm">Illustrations are simplified for educational purposes.</p>
         </footer>
     </div>
 
@@ -287,5 +287,5 @@
         });
     </script>
 </body>
-</html>
-
+    </html>
+    
